use openjdk-8-jre, version to 0.2.6